--- a/starter_files/index.html
+++ b/starter_files/index.html
@@ -2,8 +2,18 @@
 <html>
   <head>
     <title>Customer Database</title>
+    <link rel="stylesheet" href="customers.css">
   </head>
   <body>
+    <header>
+      
+    </header>
+    <main>
+      <div class="container1">
+
+      </div>
+    </main>
     <script src="customers.js"></script>
+    <script src ="main.js"></script>
   </body>
 </html>
